[refactor] Update remaining backup and restore code for Java 21
Collect the remaining mixed migration rewrites in the backup and restore flow into one focused commit.